--- a/donate-ui/package.json
+++ b/donate-ui/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~10.0.0",
     "@angular/platform-browser-dynamic": "~10.0.0",
     "@angular/router": "~10.0.0",
+    "@capacitor/android": "^2.4.2",
     "@capacitor/core": "2.4.2",
+    "@capacitor/ios": "^2.4.2",
     "@ionic-native/core": "^5.0.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
@@ -30,12 +32,17 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.0",
+    "@angular/cdk": "^11.0.0",
     "@angular/cli": "~10.0.5",
     "@angular/compiler": "~10.0.0",
     "@angular/compiler-cli": "~10.0.0",
+    "@angular/flex-layout": "^11.0.0-beta.33",
     "@angular/language-service": "~10.0.0",
+    "@auth0/angular-jwt": "^5.0.1",
     "@capacitor/cli": "2.4.2",
     "@ionic/angular-toolkit": "^2.3.0",
+    "@ionic/lab": "3.2.9",
+    "@ionic/storage": "^2.3.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
