--- a/donate-ui/capacitor.config.json
+++ b/donate-ui/capacitor.config.json
@@ -1,6 +1,6 @@
 {
   "appId": "io.ionic.starter",
-  "appName": "donate-ui",
+  "appName": "iGive",
   "bundledWebRuntime": false,
   "npmClient": "npm",
   "webDir": "www",
