--- a/IGive-backend/package.json
+++ b/IGive-backend/package.json
@@ -27,14 +27,17 @@
     "@nestjs/mongoose": "^6.1.2",
     "@nestjs/passport": "^6.1.0",
     "@nestjs/platform-express": "^7.5.1",
-    "reflect-metadata": "^0.1.13",
+    "@nestjs/serve-static": "^2.1.4",
     "bcrypt": "^3.0.6",
     "dotenv": "^8.2.0",
     "gravatar": "^1.8.0",
+    "install": "^0.13.0",
     "mongoose": "^5.7.8",
     "neconfig": "^1.1.0",
+    "npm": "^6.14.9",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
+    "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3"
   },
